--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
     <header>
         <nav>
            <div class="hamburger"><i class="fa fa-bars"></i></div> 
-            <img src="aset-gambar/logo.png" width="200px" height="45px">
+            <img src="logo.png" width="200px" height="45px">
             <ul>
                 <li class="active"><a href="#">Home</a></li>
                 <li><a href="#Menu">Menu</a></li>
@@ -44,17 +44,17 @@
 </div>                
 <div class="menu-section">
     
-    <img src="aset-gambar/makanan.jpg" width="100%" height="300px">
+    <img src="makanan.jpg" width="100%" height="300px">
 </div>                
 <div class="menu-section">
     <h2><span>minuman</span></h2>
     <p>Minuman spesial kami tawarkan untuk memberikan pengalaman terbaik bagi para pelanggan kami</p>
 </div>                
 <div class="menu-section">
-    <img src="aset-gambar/minuman.jpg" width="100%" height="300px">
+    <img src="minuman.jpg" width="100%" height="300px">
 </div>                
 <div class="menu-section">
-    <img src="aset-gambar/camilan" width="100%" height="300px">
+    <img src="camilan" width="100%" height="300px">
 </div>                
 <div class="menu-section">
     <h2><span>Camilan</span></h2>
@@ -62,7 +62,7 @@
 
     </div>                
 <div class="menu-section">
-    <img src="aset-gambar/paket.jpg" width="100%" height="300px">
+    <img src="paket.jpg" width="100%" height="300px">
 </div>                
 <div class="menu-section">
     <h2><span>Paket</span></h2>
@@ -97,7 +97,7 @@
       <div id="Kontak"class="footer-section left">
   
             <div class="footer-logo">
-              <img src="aset-gambar/logo.png">
+              <img src="logo.png">
               <div class="iframe">
               <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3957.6511937447485!2d112.77875731432088!3d-7.280470073569027!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x2dd7fa3e0a4e24fb%3A0x4e1eed5a2502c4d3!2sJl.%20Raya%20Kertajaya%20Indah%2C%20Kota%20SBY%2C%20Jawa%20Timur%2C%20Indonesia!5e0!3m2!1sen!2suk!4v1593720946106!5m2!1sen!2suk" width="600" height="450" frameborder="0" style="border:0;" allowfullscreen="" aria-hidden="false" tabindex="0"></iframe>
             </div>
