--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <link href="https://fonts.googleapis.com/css2?family=Bebas+Neue&display=swap" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css2?family=EB+Garamond:wght@600&family=Shadows+Into+Light&display=swap" rel="stylesheet">
         
-    <link rel="stylesheet" href="final-pokonya.css">
+    <link rel="stylesheet" href="stylesheet.css.css">
     <link rel="stylesheet" href="responsive-final.css">
 </head>
 <body>
