--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     <link href="https://fonts.googleapis.com/css2?family=EB+Garamond:wght@600&family=Shadows+Into+Light&display=swap" rel="stylesheet">
         
     <link rel="stylesheet" href="stylesheet.css.css">
-    <link rel="stylesheet" href="responsive-final.css">
+    <link rel="stylesheet" href="stylesheet-responsive.css">
 </head>
 <body>
     <header>
