--- a/index.html
+++ b/index.html
@@ -8,14 +8,14 @@
     <link href="https://fonts.googleapis.com/css2?family=Bebas+Neue&display=swap" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css2?family=EB+Garamond:wght@600&family=Shadows+Into+Light&display=swap" rel="stylesheet">
         
-    <link rel="stylesheet" href="stylesheet.css.css">
-    <link rel="stylesheet" href="stylesheet-responsive.css">
+    <link rel="stylesheet" href="stylesheet.css">
+    <link rel="stylesheet" href="responsive.css">
 </head>
 <body>
     <header>
         <nav>
            <div class="hamburger"><i class="fa fa-bars"></i></div> 
-            <img src="logo.png" width="200px" height="45px">
+            <img src="aset-gambar/logo.png" width="200px" height="45px">
             <ul>
                 <li class="active"><a href="#">Home</a></li>
                 <li><a href="#Menu">Menu</a></li>
@@ -54,7 +54,7 @@
     <img src="minuman.jpg" width="100%" height="300px">
 </div>                
 <div class="menu-section">
-    <img src="camilan" width="100%" height="300px">
+    <img src="camilan.png" width="100%" height="300px">
 </div>                
 <div class="menu-section">
     <h2><span>Camilan</span></h2>
